--- a/_posts/2017-09-14-2458676.md
+++ b/_posts/2017-09-14-2458676.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-title: '【Docker】papertrail+remote_syslog'
+title: "【Docker】papertrail+remote_syslog"
 date: 2017-09-14 07:47
-comments: true
 categories: 
 ---
+
 # 目標
 - 透過 `remote_syslog` 將 app log 送到 papertrail 中
 - 官方建議的 docker image : `https://github.com/octohost/remote_syslog`
 	- 說明 : https://help.papertrailapp.com/kb/configuration/configuring-centralized-logging-from-docker/#mount
+<!--more-->
 
 # 如何使用
 
