--- a/_posts/2017-10-30-【facebook】進階：登入.md
+++ b/_posts/2017-10-30-【facebook】進階：登入.md
@@ -35,7 +35,8 @@ categories: facebook app mobile web
 		- parameters
 			- input_token
 			- access_token : 此為 上步驟中 respone 的 access_token
-		- response : 請參考 `https://developers.facebook.com/docs/facebook-login/manually-build-a-login-flow#checktoken`
+		- response : 請參考 **附註:javascript pass value to php**
+
 
 ## 先取得 code -> 使用 code 來取得 token -> 驗證 token
 1. `https://www.facebook.com/v2.10/dialog/oauth?client_id={your_app_id}&redirect_uri={redirect_url}`
@@ -62,3 +63,39 @@ categories: facebook app mobile web
 			- input_token
 			- access_token : 此為 上步驟中 respone 的 access_token
 		- response : 請參考 `https://developers.facebook.com/docs/facebook-login/manually-build-a-login-flow#checktoken`
+
+		
+# 附註 : javascript pass value to php
+```
+<script type="text/javascript">
+
+var protocol = window.location.protocol;
+var hostname = window.location.hostname;
+var pathname = window.location.pathname; 
+baseUrl = protocol+'//'+hostname+pathname;
+// alert(baseUrl);
+
+fragment = window.location.hash.substr(1);
+
+if (fragment) {
+    // alert(fragment);
+    state = fragment.substr(fragment.indexOf('state='))
+                  .split('&')[0]
+                  .split('=')[1];
+    // alert(state);
+    access_token = fragment.substr(fragment.indexOf('access_token='))
+                  .split('&')[0]
+                  .split('=')[1];
+    // alert(access_token);
+    
+    // alert("do it");
+    location.href = baseUrl+"?state=" + state + '&access_token=' + access_token;
+} 
+else 
+    exit();
+
+</script>
+
+<?php  
+echo $_GET['access_token'];
+```
