--- a/_posts/2016-09-20-iOS-ipa.md
+++ b/_posts/2016-09-20-iOS-ipa.md
@@ -3,7 +3,7 @@ layout: post
 title: '【ipa】check Provision'
 date: 2016-09-20 14:38
 comments: true
-categories: 
+categories: iOS ipa
 ---
 ## 手動檢查
 
