--- a/_posts/2017-01-12-PHP-MQTT.md
+++ b/_posts/2017-01-12-PHP-MQTT.md
@@ -3,7 +3,7 @@ layout: post
 title: '【php+mqtt】basic'
 date: 2017-01-12 09:34
 comments: true
-categories: 
+categories: PHP MQTT
 ---
 # php 透過 mqtt 進行發送與監聽
 ## install 
