--- a/_posts/2017-05-18-HLS-AWS.md
+++ b/_posts/2017-05-18-HLS-AWS.md
@@ -3,7 +3,7 @@ layout: post
 title: '【AWS S3】播放 HLS 時，發生 crossdomain access denied'
 date: 2017-05-18 08:19
 comments: true
-categories: 
+categories: HLS AWS
 ---
 # 環境
 
