--- a/_posts/2017-09-08-RPI3-wifiAp.md
+++ b/_posts/2017-09-08-RPI3-wifiAp.md
@@ -3,7 +3,7 @@ layout: post
 title: '【Raspberry pi 3】wifi ap mode'
 date: 2017-09-08 13:16
 comments: true
-categories: 
+categories: Raspberry
 ---
 ## initial check
 1. 檢查網路是否支援 AP : `iw list`，須找到支援 AP 的選項
