--- a/_posts/2017-05-28-HLS-m3u8.md
+++ b/_posts/2017-05-28-HLS-m3u8.md
@@ -3,7 +3,7 @@ layout: post
 title: '【HLS】m3u8 在直播上，播放器詢問次數測試'
 date: 2017-05-28 12:25
 comments: true
-categories: 
+categories: HLS
 ---
 # hls m3u8 詢問次數測試
 
