--- a/_posts/2019-09-10-[Go]struct 優化.md
+++ b/_posts/2019-09-10-[Go]struct 優化.md
@@ -177,7 +177,7 @@ fmt.Println(r.area())
 可以透過 struct 將 『身分證、健保卡、護照』 各自建立起來，用在不同的目的上
 但是否有方法整合這些物件？
 
-『參考下篇 struct 優化（二）』
+參考下篇: [struct優化（二）:interface]({{ site.url }}{% link _posts/2019-09-10-[Go]struct-優化(二)-interface.md %})
 
 
 
