--- a/_posts/2019-09-16-[Go]gRPC(一).md
+++ b/_posts/2019-09-16-[Go]gRPC(一).md
@@ -15,11 +15,11 @@ tags: Golang
 - 基於 HTTP/2 協議標準設計, 所以也是有 Request 與 Response
 	- HTTP/2 是一個二進位協議, 意味著可讀性是 0
 - 基於 ProtoBuf(Protocol Buffers) 序列化協議開發
-- 四種模式
-	- unary
-	- client streaming
-	- server streaming
-	- bidirectional streaming
+- 實踐方法有[四種模式](https://grpc.io/docs/tutorials/basic/go/)
+	- simple RPC
+	- Client-side streaming RPC
+	- Server-side streaming RPC
+	- Bidirectional streaming RPC
 
 ## 為了解決?
 - 低延遲, 高擴充性, 分散式系統
