--- a/_posts/2019-10-11-[Go]Sort_操作.md
+++ b/_posts/2019-10-11-[Go]Sort_操作.md
@@ -17,6 +17,8 @@ tags: Golang
 		- `type ByAge []Person`
 	- 最下方有簡易範例，但差別是官方的 sort.Search() 似乎無法抓到 index=0 (--20191011, 已回報, 原因 `uint(i+j)`, 應該從 0 開始計算才是)
 
+<!--more-->
+
 # Int Sort
 ```
 package main
