--- a/_posts/2019-10-11-[Go]Sort_操作.md
+++ b/_posts/2019-10-11-[Go]Sort_操作.md
@@ -16,6 +16,7 @@ tags: Golang
 		- `type Person struct{}`
 		- `type ByAge []Person`
 	- 最下方有簡易範例，但差別是官方的 sort.Search() 似乎無法抓到 index=0 (--20191011, 已回報, 原因 `uint(i+j)`, 應該從 0 開始計算才是)
+		- Playground : https://play.golang.org/p/f0E0SRNHj-5
 
 <!--more-->
 
