--- a/_posts/2019-10-11-[Go]Sort_操作.md
+++ b/_posts/2019-10-11-[Go]Sort_操作.md
@@ -17,8 +17,8 @@ tags: Golang
 		- `type ByAge []Person`
 	- 最下方有簡易範例，但官方的 sort.Search() 是 binary search，不能用來搜尋 value
 		- 錯誤範例 Playground : https://play.golang.org/p/f0E0SRNHj-5
-		- 上述範例若是改為 排序後->搜尋 age 即可 
 	- 如果要搜尋 value, 則 search 必須重新制定搜尋 value 的做法
+		- 上述範例若是改為 排序後->搜尋 age 即可, 如最下方範例
 
 <!--more-->
 
